# dmario_utils

./: README.md  mkdocs.yml  setup.cfg  test.sh
docs/: docs.md
src/dmario_utils/: __init__.py  dmario_utils.py
tests/dmario_utils/: test_dmario_utils.py
