[metadata]
name = dmario_utils
version = 0.1.0
author = dMario24
author_email = data.mario24@gmail.com
description = 데이터 마리오 파이썬 유틸 모임
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dMario24.github.io/dmario_utils
project_urls =
    Bug Tracker = https://github.com/dMario24/dmario_utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dmario_utils-ping = dmario_utils:ping
